# Ask_Auto_MCP_Server

./: .gitignore  pyproject.toml
EditorMCP/: Dockerfile  README.md  config.yaml  edit_agent_prompt.md  main.py  main_MCP_component.py  pyproject.toml  requirements.txt  test_env_config.py  test_mcp_http.py  workflow_agent_prompt.md
EditorMCP/config/: development.yaml  production.yaml  testing.yaml
EditorMCP/docs/: README.md  monitoring_and_logging.md
EditorMCP/docs/architecture/: README.md  api-documentation.md  architecture-overview.md  component-diagrams.drawio  deployment-architecture.md  sequence-diagrams.drawio  sequence-diagrams.md  setup-configuration-guide.md  system-architecture.drawio
EditorMCP/examples/: config_demo.py  llm_service_usage.py  monitoring_demo.py  preview_tool_demo.py  session_manager_demo.py
EditorMCP/json_editor_mcp/: __init__.py  main.py  server.py
EditorMCP/json_editor_mcp/config/: __init__.py  loader.py  models.py
EditorMCP/json_editor_mcp/docs/: error_handling.md
EditorMCP/json_editor_mcp/models/: __init__.py  core.py  errors.py  requests.py  session.py
EditorMCP/json_editor_mcp/services/: __init__.py  custom_adapter.py  factory.py  gemini_adapter.py  guardrails_validator.py  hybrid_session_manager.py  interface.py  json_processor.py  openai_adapter.py  session_manager.py  session_storage.py
EditorMCP/json_editor_mcp/tools/: __init__.py  apply_tool.py  preview_tool.py
EditorMCP/json_editor_mcp/utils/: __init__.py  error_handler.py  health_check.py  json_processor.py  llm_monitoring.py  logging_config.py  metrics.py  monitoring_config.py  monitoring_integration.py  prompt_manager.py  server_monitoring.py  service_error_handlers.py
EditorMCP/prompts/: __init__.py  guardrails_prompt.txt  system_prompt.txt
EditorMCP/prompts/templates/: __init__.py  addition_template.txt  deletion_template.txt  edit_instruction.txt  modification_template.txt
EditorMCP/src/: __init__.py
EditorMCP/src/api/: __init__.py  app.py  models.py  routes.py  server.py
